--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
+    "chart.js": "^3.4.1",
     "eslint": "^7.31.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-standard": "^16.0.2",
