--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "type": "module",
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.1"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
@@ -21,7 +24,6 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
-    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
     "typescript": "^4.3.5"
   }
